--- a/clg-web-main/Backend/package.json
+++ b/clg-web-main/Backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fast-csv/format": "^5.0.5",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -21,7 +22,8 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
