--- a/clg-web-main/Backend/package.json
+++ b/clg-web-main/Backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fast-csv/format": "^5.0.5",
+    "@n8n/chat": "^0.60.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
