--- a/clg-web-main1/Backend/package.json
+++ b/clg-web-main1/Backend/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "twilio": "^5.10.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
