--- a/clg-web-main1/package.json
+++ b/clg-web-main1/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.12.2",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "multer": "^2.0.2"
   }
 }
